--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -7,7 +7,7 @@
     "lamp title sun sun";
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, minmax(0px, auto));
-  border-bottom: 1px solid #ff8989;
+  border-bottom: 1px solid $hero-border-bottom;
 }
 
 .lamp {
