--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -34,7 +34,26 @@
   list-style: none;
 
   &-item {
+    position: relative;
     margin: 0 47px;
+  }
+
+  &-item::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #6a4a39;
+    position: absolute;
+    visibility: hidden;
+    transform-origin: left;
+    transform: scale(0);
+    transition: 0.25s ease-out;
+  }
+
+  &-item:hover::after {
+    visibility: visible;
+    transform: scale(1);
   }
 
   &-item:last-of-type {
