--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -84,5 +84,11 @@
     font-size: 20px;
     text-align: center;
     color: #fff;
+    transition: all 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
+
+    &:hover {
+      transform: translateY(-3px);
+      opacity: 0.7;
+    }
   }
 }
