--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -8,6 +8,14 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, minmax(0px, auto));
   border-bottom: 1px solid $hero-border-bottom;
+
+  @media (max-width: 768px) {
+    grid-template-areas:
+      "title"
+      "sun";
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
 }
 
 .lamp {
@@ -17,6 +25,9 @@
   align-self: end;
   position: absolute;
   bottom: -350px;
+  @media (max-width: 960px) {
+    display: none;
+  }
 }
 
 #wave1,
@@ -38,10 +49,18 @@
   grid-area: sun;
   align-self: end;
   justify-self: start;
+  margin-bottom: -6px;
   img {
     max-width: 400px;
     min-width: 200px;
     width: 100%;
+  }
+
+  @media (max-width: 768px) {
+    justify-self: center;
+    img {
+      max-width: 600px;
+    }
   }
 }
 
@@ -50,12 +69,19 @@
   grid-area: sun;
   justify-self: start;
   align-self: end;
+  @media (max-width: 768px) {
+    width: 70%;
+  }
 }
 
 .hero_cta {
   grid-area: title;
   justify-self: end;
   align-self: center;
+  font-family: Alegreya;
+  font-style: normal;
+  line-height: normal;
+  z-index: 3;
 
   .cta_title {
     font-size: 60px;
@@ -89,6 +115,28 @@
     &:hover {
       transform: translateY(-3px);
       opacity: 0.7;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .hero_cta {
+    justify-self: center;
+    align-self: end;
+    margin-top: 4rem;
+
+    .cta_title {
+      font-size: 40px;
+      text-align: center;
+    }
+
+    .cta_description {
+      max-width: 280px;
+    }
+
+    .cta_btn {
+      position: relative;
+      width: 100%;
     }
   }
 }
