--- a/src/components/News.scss
+++ b/src/components/News.scss
@@ -56,6 +56,29 @@
   justify-self: end;
 }
 
+.fly_right {
+  opacity: 0;
+  transform-origin: center center 0px;
+  transform: translate(-500px, 300px);
+  animation-name: fly_right;
+  animation-duration: 3s;
+  animation-timing-function: ease-out;
+  animation-delay: 0.8s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fly_right {
+  10% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: perspective(800px) translateZ(-3em) translateX(-200px) scale(2);
+    opacity: 1;
+  }
+}
+
 .news {
   max-width: 265px;
 
@@ -103,4 +126,76 @@
 
 .path {
   visibility: hidden;
+}
+
+@media (max-width: 768px) {
+  .news_container {
+    grid-template-columns: 1fr 1fr;
+    margin: 0px 20px;
+  }
+  .large_plane {
+    display: none;
+  }
+  .luggage {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+  .fly_container {
+    grid-column: 1/3;
+    grid-row: 4;
+    width: 600px;
+    align-self: center;
+    justify-self: center;
+    svg {
+      height: 500px;
+      max-width: 600px;
+    }
+  }
+
+  .stairs {
+    display: none;
+  }
+  .news_1 {
+    grid-column: 2;
+    grid-row: 3;
+    margin-top: 0;
+  }
+
+  .news_2 {
+    grid-column: 1;
+  }
+
+  .news_3 {
+    grid-column: 1;
+  }
+
+  .furniture {
+    grid-column: 2;
+  }
+}
+
+@media (max-width: 420px) {
+  .news-section {
+    background-position: center;
+  }
+
+  .news_container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .news_container * {
+    justify-self: center;
+    align-self: center;
+  }
+
+  .luggage {
+    margin-top: 15rem;
+  }
+
+  .fly_container {
+    svg {
+      height: 300px;
+    }
+  }
 }
